--- a/instaapp-backend/appsettings.Development.json
+++ b/instaapp-backend/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=instapp;Username=postgres;Password=P@ssw0rdMG"
+  },
+  "AppSettings": {
+    "Secret": "In5T4aPp@2022"
   }
 }
