added controller posting

--- a/instaapp-backend/appsettings.Development.json
+++ b/instaapp-backend/appsettings.Development.json
@@ -9,6 +9,6 @@
     "DefaultConnection": "Host=localhost;Port=5432;Database=instapp;Username=postgres;Password=P@ssw0rdMG"
   },
   "AppSettings": {
-    "Secret": "In5T4aPp@2022"
+    "Secret": "In5T4aPpS3v1M4@2022"
   }
 }
