--- a/instaapp-backend/appsettings.json
+++ b/instaapp-backend/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=instapp;Username=postgres;Password=P@ssw0rdMG"
+  },
+  "AppSettings": {
+    "Secret": "In5T4aPpS3v1M4@2022"
+  },
   "AllowedHosts": "*"
 }
