--- a/instaapp-backend/instaapp-backend.csproj
+++ b/instaapp-backend/instaapp-backend.csproj
@@ -36,4 +36,6 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.23.1" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1development_1json__JsonSchema="https://json.schemastore.org/appsettings.json" /></VisualStudio></ProjectExtensions>
+
 </Project>
